# Access-Control-Manager-FastAPI

./: pyproject.toml  requirements.txt
api/v1/: accesses.py  resources.py  router.py  users.py
app/: app.py
core/: database.py
database/: base.py  models.py  schemas.py  session.py
models/: accesses.py  resources.py  users.py
repository/: accesses_repository.py  resources_repository.py  users_repository.py
schemas/: accesses.py  resources.py  users.py
server/: server.py
service/: access_service.py  resources_service.py  users_service.py
