[project]
name = "acm-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrey Andreev",email = "gadlergame@list.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "alembic (>=1.18.4,<2.0.0)",
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "uuid (>=1.30,<2.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
