[project]
name = "acm-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrey Andreev",email = "andreyevv1109@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "uuid (>=1.30,<2.0)",
    "faker (>=40.4.0,<41.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "jsonschema (>=4.26.0,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "allure-python-commons (>=2.15.3,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
